crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__deprecated_self_cr_enabled_at_odoo_19.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODOO035 [*] Use "self.env.cr" instead of "self._cr" (deprecated since 19.0)
 --> ODOO035.py:8:9
  |
7 |     def action_do(self):
8 |         self._cr.execute("SELECT 1")
  |         ^^^^^^^^
9 |         self.env.cr.execute("SELECT 2")
  |
help: Replace with `self.env.cr`
  |
7 |     def action_do(self):
  -         self._cr.execute("SELECT 1")
8 +         self.env.cr.execute("SELECT 1")
9 |         self.env.cr.execute("SELECT 2")
  |
