crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__except_pass.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8138 `except` block with only a `pass` statement; consider logging the exception
 --> except_pass.py:3:1
  |
1 |   try:
2 |       do_something()
3 | / except Exception:
4 | |     pass
  | |________^
5 |
6 |   try:
  |

ODW8138 `except` block with only a `pass` statement; consider logging the exception
  --> except_pass.py:8:1
   |
 6 |   try:
 7 |       do_something()
 8 | / except Exception:
 9 | |     pass  # only one statement, but a trailing comment doesn't change the body
   | |________^
10 |
11 |   try:
   |
