crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__external_request_timeout.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODE8106 Use of external request method `requests.get` without timeout. It could wait for a long time
  --> external_request_timeout.py:10:1
   |
 9 | # Flagged: no timeout.
10 | requests.get("https://example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 | requests.request("GET", "https://example.com")
12 | post("https://example.com", data={})
   |

ODE8106 Use of external request method `requests.request` without timeout. It could wait for a long time
  --> external_request_timeout.py:11:1
   |
 9 | # Flagged: no timeout.
10 | requests.get("https://example.com")
11 | requests.request("GET", "https://example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | post("https://example.com", data={})
13 | urllib.request.urlopen("https://example.com")
   |

ODE8106 Use of external request method `requests.post` without timeout. It could wait for a long time
  --> external_request_timeout.py:12:1
   |
10 | requests.get("https://example.com")
11 | requests.request("GET", "https://example.com")
12 | post("https://example.com", data={})
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 | urllib.request.urlopen("https://example.com")
14 | smtplib.SMTP("localhost")
   |

ODE8106 Use of external request method `urllib.request.urlopen` without timeout. It could wait for a long time
  --> external_request_timeout.py:13:1
   |
11 | requests.request("GET", "https://example.com")
12 | post("https://example.com", data={})
13 | urllib.request.urlopen("https://example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 | smtplib.SMTP("localhost")
15 | ftplib.FTP("ftp.example.com")
   |

ODE8106 Use of external request method `smtplib.SMTP` without timeout. It could wait for a long time
  --> external_request_timeout.py:14:1
   |
12 | post("https://example.com", data={})
13 | urllib.request.urlopen("https://example.com")
14 | smtplib.SMTP("localhost")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
15 | ftplib.FTP("ftp.example.com")
16 | Serial("/dev/ttyS0")
   |

ODE8106 Use of external request method `ftplib.FTP` without timeout. It could wait for a long time
  --> external_request_timeout.py:15:1
   |
13 | urllib.request.urlopen("https://example.com")
14 | smtplib.SMTP("localhost")
15 | ftplib.FTP("ftp.example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 | Serial("/dev/ttyS0")
   |

ODE8106 Use of external request method `serial.Serial` without timeout. It could wait for a long time
  --> external_request_timeout.py:16:1
   |
14 | smtplib.SMTP("localhost")
15 | ftplib.FTP("ftp.example.com")
16 | Serial("/dev/ttyS0")
   | ^^^^^^^^^^^^^^^^^^^^
17 |
18 | # Not flagged: timeout given.
   |
