crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__external_request_timeout_seconds_configured.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODE8106 [*] Use of external request method `requests.get` without timeout. It could wait for a long time
  --> external_request_timeout.py:10:1
   |
 9 | # Flagged: no timeout.
10 | requests.get("https://example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 | requests.request("GET", "https://example.com")
12 | post("https://example.com", data={})
   |
help: Add `timeout=30`
   |
9  | # Flagged: no timeout.
   - requests.get("https://example.com")
10 + requests.get("https://example.com", timeout=30)
11 | requests.request("GET", "https://example.com")
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 [*] Use of external request method `requests.request` without timeout. It could wait for a long time
  --> external_request_timeout.py:11:1
   |
 9 | # Flagged: no timeout.
10 | requests.get("https://example.com")
11 | requests.request("GET", "https://example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | post("https://example.com", data={})
13 | urllib.request.urlopen("https://example.com")
   |
help: Add `timeout=30`
   |
10 | requests.get("https://example.com")
   - requests.request("GET", "https://example.com")
11 + requests.request("GET", "https://example.com", timeout=30)
12 | post("https://example.com", data={})
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 [*] Use of external request method `requests.post` without timeout. It could wait for a long time
  --> external_request_timeout.py:12:1
   |
10 | requests.get("https://example.com")
11 | requests.request("GET", "https://example.com")
12 | post("https://example.com", data={})
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 | urllib.request.urlopen("https://example.com")
14 | smtplib.SMTP("localhost")
   |
help: Add `timeout=30`
   |
11 | requests.request("GET", "https://example.com")
   - post("https://example.com", data={})
12 + post("https://example.com", timeout=30, data={})
13 | urllib.request.urlopen("https://example.com")
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 [*] Use of external request method `urllib.request.urlopen` without timeout. It could wait for a long time
  --> external_request_timeout.py:13:1
   |
11 | requests.request("GET", "https://example.com")
12 | post("https://example.com", data={})
13 | urllib.request.urlopen("https://example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 | smtplib.SMTP("localhost")
15 | ftplib.FTP("ftp.example.com")
   |
help: Add `timeout=30`
   |
12 | post("https://example.com", data={})
   - urllib.request.urlopen("https://example.com")
13 + urllib.request.urlopen("https://example.com", timeout=30)
14 | smtplib.SMTP("localhost")
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 [*] Use of external request method `smtplib.SMTP` without timeout. It could wait for a long time
  --> external_request_timeout.py:14:1
   |
12 | post("https://example.com", data={})
13 | urllib.request.urlopen("https://example.com")
14 | smtplib.SMTP("localhost")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
15 | ftplib.FTP("ftp.example.com")
16 | Serial("/dev/ttyS0")
   |
help: Add `timeout=30`
   |
13 | urllib.request.urlopen("https://example.com")
   - smtplib.SMTP("localhost")
14 + smtplib.SMTP("localhost", timeout=30)
15 | ftplib.FTP("ftp.example.com")
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 [*] Use of external request method `ftplib.FTP` without timeout. It could wait for a long time
  --> external_request_timeout.py:15:1
   |
13 | urllib.request.urlopen("https://example.com")
14 | smtplib.SMTP("localhost")
15 | ftplib.FTP("ftp.example.com")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 | Serial("/dev/ttyS0")
   |
help: Add `timeout=30`
   |
14 | smtplib.SMTP("localhost")
   - ftplib.FTP("ftp.example.com")
15 + ftplib.FTP("ftp.example.com", timeout=30)
16 | Serial("/dev/ttyS0")
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 [*] Use of external request method `serial.Serial` without timeout. It could wait for a long time
  --> external_request_timeout.py:16:1
   |
14 | smtplib.SMTP("localhost")
15 | ftplib.FTP("ftp.example.com")
16 | Serial("/dev/ttyS0")
   | ^^^^^^^^^^^^^^^^^^^^
17 |
18 | # Flagged, but no fix: `**kwargs` may already carry a `timeout`.
   |
help: Add `timeout=30`
   |
15 | ftplib.FTP("ftp.example.com")
   - Serial("/dev/ttyS0")
16 + Serial("/dev/ttyS0", timeout=30)
17 |
   |
note: This is an unsafe fix and may change runtime behavior

ODE8106 Use of external request method `requests.get` without timeout. It could wait for a long time
  --> external_request_timeout.py:19:1
   |
18 | # Flagged, but no fix: `**kwargs` may already carry a `timeout`.
19 | requests.get("https://example.com", **kwargs)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |
21 | # Flagged: the fix lands before the existing keyword arguments.
   |
help: Add `timeout=30`

ODE8106 [*] Use of external request method `requests.post` without timeout. It could wait for a long time
  --> external_request_timeout.py:22:1
   |
21 | # Flagged: the fix lands before the existing keyword arguments.
22 | post("https://example.com", data={"a": 1}, headers={"X-Token": "secret"})
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
23 |
24 | # Not flagged: timeout given.
   |
help: Add `timeout=30`
   |
21 | # Flagged: the fix lands before the existing keyword arguments.
   - post("https://example.com", data={"a": 1}, headers={"X-Token": "secret"})
22 + post("https://example.com", timeout=30, data={"a": 1}, headers={"X-Token": "secret"})
23 |
   |
note: This is an unsafe fix and may change runtime behavior
