crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__header_comments.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODC8501 [*] Use of header comments
 --> header_comments.py:3:1
  |
1 | #!/usr/bin/env python3
2 | # -*- coding: utf-8 -*-
3 | # TODO: remove this stray comment
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 | # pylint: disable=missing-docstring
5 | # ruff: ignore[unused-import]
  |
help: Remove stray header comment
  |
2 | # -*- coding: utf-8 -*-
  - # TODO: remove this stray comment
3 | # pylint: disable=missing-docstring
  |
